// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App render App when "driverInfoFetched" is equal false 1`] = `<div />`;

exports[`App render App when "useInfoFetched" is equal false 1`] = `<div />`;

exports[`App render App when token is existed 1`] = `
<div>
  <section
    class="css-m36rcd"
  >
    <div
      class="dms-layout-side css-13dah2i"
    >
      <div
        class="dms-layout-side-start"
      >
        <div>
          <div
            class="title"
          >
            <span
              class="label label-primary"
            >
              Action
            </span>
            <span
              class="label label-base"
            >
              SQLE
            </span>
          </div>
        </div>
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-1thf7qv"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 css-dev-only-do-not-override-is2hm8 ant-select-single ant-select-show-arrow"
              searchinputref="[object Object]"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="rc_select_TEST_OR_SSR"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                >
                  <span
                    class="custom-select-placeholder css-qly0fu"
                  >
                    <span
                      class="custom-select-placeholder-prefix"
                    >
                      <span
                        class="project-flag-icon css-u3jcp4"
                      >
                        <svg
                          fill="none"
                          height="18"
                          viewBox="0 0 18 18"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M2.25 2.25H9.2865C9.42575 2.25007 9.56222 2.28891 9.68064 2.36216C9.79907 2.43542 9.89476 2.54019 9.957 2.66475L10.5 3.75H15C15.1989 3.75 15.3897 3.82902 15.5303 3.96967C15.671 4.11032 15.75 4.30109 15.75 4.5V12.75C15.75 12.9489 15.671 13.1397 15.5303 13.2803C15.3897 13.421 15.1989 13.5 15 13.5H10.2135C10.0743 13.4999 9.93778 13.4611 9.81936 13.3878C9.70093 13.3146 9.60524 13.2098 9.543 13.0853L9 12H3.75V16.5H2.25V2.25Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="custom-select-placeholder-value"
                    >
                      请选择{{name}}
                    </span>
                  </span>
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="custom-icon custom-icon-right-arrow-select-suffix css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.78145 7.99999L5.48145 4.69999L6.42411 3.75732L10.6668 7.99999L6.42411 12.2427L5.48145 11.3L8.78145 7.99999Z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
        <ul
          class="ant-menu ant-menu-root ant-menu-inline ant-menu-light custom-menu css-dev-only-do-not-override-1thf7qv"
          data-menu-list="true"
          role="menu"
          tabindex="0"
        />
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
      <div
        class="dms-layout-side-end"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-1thf7qv"
        >
          <div
            class="ant-spin-container"
          >
            <span
              class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-1thf7qv"
            >
              <span
                class="ant-avatar-string"
                style="transform: scale(1) translateX(-50%);"
              >
                A
              </span>
            </span>
          </div>
        </div>
        <div
          class="global-system-icon-wrapper"
        >
          <span
            class="custom-icon-global-system css-u3jcp4"
          >
            <svg
              fill="none"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.125 4.875L9 0.75L1.875 4.875V13.125L9 17.25L16.125 13.125V4.875ZM9 12.75C11.0711 12.75 12.75 11.0711 12.75 9C12.75 6.92893 11.0711 5.25 9 5.25C6.92893 5.25 5.25 6.92893 5.25 9C5.25 11.0711 6.92893 12.75 9 12.75Z"
                fill="#c3c6cd"
                fill-rule="evenodd"
              />
              <path
                d="M9 11.25C9.59674 11.25 10.169 11.0129 10.591 10.591C11.0129 10.169 11.25 9.59674 11.25 9C11.25 8.40326 11.0129 7.83097 10.591 7.40901C10.169 6.98705 9.59674 6.75 9 6.75C8.40326 6.75 7.83097 6.98705 7.40901 7.40901C6.98705 7.83097 6.75 8.40326 6.75 9C6.75 9.59674 6.98705 10.169 7.40901 10.591C7.83097 11.0129 8.40326 11.25 9 11.25Z"
                fill="#8a8f99"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="dms-layout-content"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          用户引导
        </div>
        <div
          class="extra"
        />
      </div>
      <section
        class="css-1wil037"
      >
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-1thf7qv"
        >
          <div
            class="ant-col icon-wrapper css-dev-only-do-not-override-1thf7qv"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="icons/data-source"
                >
                  <path
                    d="M3 14.5C3 16.985 7.03 19 12 19C16.97 19 21 16.985 21 14.5V17.5C21 19.985 16.97 22 12 22C7.03 22 3 19.985 3 17.5V14.5ZM12 12C7.03 12 3 9.985 3 7.5C3 5.015 7.03 3 12 3C16.97 3 21 5.015 21 7.5C21 9.985 16.97 12 12 12Z"
                    fill="white"
                    fill-opacity="0.6"
                    id="1"
                  />
                  <path
                    d="M21 9.5V12.5C21 14.985 16.97 17 12 17C7.03 17 3 14.985 3 12.5V9.5C3 11.985 7.03 14 12 14C16.97 14 21 11.985 21 9.5Z"
                    fill="white"
                    id="2"
                  />
                </g>
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box css-dev-only-do-not-override-1thf7qv"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP1
                </div>
                <div
                  class="step-title"
                >
                  数据源管理
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap css-dev-only-do-not-override-1thf7qv"
            >
              <div
                class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="sub-title"
                >
                  数据源管理
                </div>
                <div
                  class="desc"
                >
                  管理数据源相关操作
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看列表
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          添加数据源
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="sub-title"
                >
                  外部数据源
                </div>
                <div
                  class="desc"
                >
                  管理外部数据源相关操作
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看列表
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          新建同步任务
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-1thf7qv"
        >
          <div
            class="ant-col icon-wrapper css-dev-only-do-not-override-1thf7qv"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="icons/member"
                >
                  <path
                    d="M12 10C14.2091 10 16 8.20914 16 6C16 3.79086 14.2091 2 12 2C9.79086 2 8 3.79086 8 6C8 8.20914 9.79086 10 12 10ZM5.5 13C6.88071 13 8 11.8807 8 10.5C8 9.11929 6.88071 8 5.5 8C4.11929 8 3 9.11929 3 10.5C3 11.8807 4.11929 13 5.5 13ZM21 10.5C21 11.8807 19.8807 13 18.5 13C17.1193 13 16 11.8807 16 10.5C16 9.11929 17.1193 8 18.5 8C19.8807 8 21 9.11929 21 10.5ZM12 11C14.7614 11 17 13.2386 17 16V22H7V16C7 13.2386 9.23858 11 12 11ZM5 15.9999C5 15.307 5.10067 14.6376 5.28818 14.0056L5.11864 14.0204C3.36503 14.2104 2 15.6958 2 17.4999V21.9999H5V15.9999ZM22 21.9999V17.4999C22 15.6378 20.5459 14.1153 18.7118 14.0056C18.8993 14.6376 19 15.307 19 15.9999V21.9999H22Z"
                    fill="white"
                    fill-opacity="0.6"
                    id="1"
                  />
                  <path
                    d="M5.5 13C6.88071 13 8 11.8807 8 10.5C8 9.11929 6.88071 8 5.5 8C4.11929 8 3 9.11929 3 10.5C3 11.8807 4.11929 13 5.5 13ZM21 10.5C21 11.8807 19.8807 13 18.5 13C17.1193 13 16 11.8807 16 10.5C16 9.11929 17.1193 8 18.5 8C19.8807 8 21 9.11929 21 10.5ZM5 15.9999C5 15.307 5.10067 14.6376 5.28818 14.0056L5.11864 14.0204C3.36503 14.2104 2 15.6958 2 17.4999V21.9999H5V15.9999ZM22 21.9999V17.4999C22 15.6378 20.5459 14.1153 18.7118 14.0056C18.8993 14.6376 19 15.307 19 15.9999V21.9999H22Z"
                    fill="white"
                    id="2"
                  />
                </g>
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box css-dev-only-do-not-override-1thf7qv"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP2
                </div>
                <div
                  class="step-title"
                >
                  成员与权限管理
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap css-dev-only-do-not-override-1thf7qv"
            >
              <div
                class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="sub-title"
                >
                  成员与权限管理
                </div>
                <div
                  class="desc"
                >
                  为项目添加成员/成员组，并配置相应的数据源操作权限
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看成员
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-1thf7qv"
        >
          <div
            class="ant-col icon-wrapper css-dev-only-do-not-override-1thf7qv"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="icons/lock"
                >
                  <path
                    d="M18 8H20C20.2652 8 20.5196 8.10536 20.7071 8.29289C20.8946 8.48043 21 8.73478 21 9V21C21 21.2652 20.8946 21.5196 20.7071 21.7071C20.5196 21.8946 20.2652 22 20 22H4C3.73478 22 3.48043 21.8946 3.29289 21.7071C3.10536 21.5196 3 21.2652 3 21V9C3 8.73478 3.10536 8.48043 3.29289 8.29289C3.48043 8.10536 3.73478 8 4 8H6V7C6 5.4087 6.63214 3.88258 7.75736 2.75736C8.88258 1.63214 10.4087 1 12 1C13.5913 1 15.1174 1.63214 16.2426 2.75736C17.3679 3.88258 18 5.4087 18 7V8ZM16 8V7C16 5.93913 15.5786 4.92172 14.8284 4.17157C14.0783 3.42143 13.0609 3 12 3C10.9391 3 9.92172 3.42143 9.17157 4.17157C8.42143 4.92172 8 5.93913 8 7V8H16ZM11 14V16H13V14H11ZM7 14V16H9V14H7ZM15 14V16H17V14H15Z"
                    fill="white"
                    fill-opacity="0.6"
                    id="1"
                  />
                  <path
                    d="M16 8V7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7V8H6V7C6 3.68629 8.68629 1 12 1C15.3137 1 18 3.68629 18 7V8H16Z"
                    fill="white"
                    id="2"
                  />
                </g>
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box css-dev-only-do-not-override-1thf7qv"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP3
                </div>
                <div
                  class="step-title"
                >
                  数据安全规则管理
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap css-dev-only-do-not-override-1thf7qv"
            >
              <div
                class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="sub-title"
                >
                  审核管理
                </div>
                <div
                  class="desc"
                >
                  查看平台支持的审核规则，并自定义审核规则模板，监察已生成的SQL，或使用SQL审核改善SQL质量
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看审核规则
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          查看规则模板
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px; padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                           查看智能扫描
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          新建SQL审核
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="sub-title"
                >
                  审批流程
                </div>
                <div
                  class="desc"
                >
                  根据实际业务流转变更流程模板
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          配置审批流程模板
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-1thf7qv"
        >
          <div
            class="ant-col icon-wrapper css-dev-only-do-not-override-1thf7qv"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="icons/rule"
                >
                  <path
                    d="M5.83333 1.5C5.09695 1.5 4.5 2.09695 4.5 2.83333V3.5H18.1667C18.903 3.5 19.5 4.09695 19.5 4.83333V20.1667C19.5 20.2818 19.4854 20.3935 19.458 20.5H20.1667C20.903 20.5 21.5 19.903 21.5 19.1667V2.83333C21.5 2.09695 20.903 1.5 20.1667 1.5H5.83333Z"
                    fill="white"
                    id="2"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.83333 3.5C3.09695 3.5 2.5 4.09695 2.5 4.83333V21.1667C2.5 21.903 3.09695 22.5 3.83333 22.5H18.1667C18.903 22.5 19.5 21.903 19.5 21.1667V4.83333C19.5 4.09695 18.903 3.5 18.1667 3.5H3.83333ZM7 9.66667C7 9.29848 7.29848 9 7.66667 9H14.3333C14.7015 9 15 9.29848 15 9.66667V10.3333C15 10.7015 14.7015 11 14.3333 11H7.66667C7.29848 11 7 10.7015 7 10.3333V9.66667ZM7 14.6667C7 14.2985 7.29848 14 7.66667 14H11.3333C11.7015 14 12 14.2985 12 14.6667V15.3333C12 15.7015 11.7015 16 11.3333 16H7.66667C7.29848 16 7 15.7015 7 15.3333V14.6667Z"
                    fill="white"
                    fill-opacity="0.6"
                    fill-rule="evenodd"
                    id="1"
                  />
                </g>
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box css-dev-only-do-not-override-1thf7qv"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP4
                </div>
                <div
                  class="step-title"
                >
                  数据查询与变更
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap css-dev-only-do-not-override-1thf7qv"
            >
              <div
                class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="sub-title"
                >
                  SQL窗口
                </div>
                <div
                  class="desc"
                >
                  使用在线的数据编辑器（CloudBeaver）进行SQL查询和编辑
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          进入SQL工作台
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="sub-title"
                >
                  数据变更
                </div>
                <div
                  class="desc"
                >
                  在线提起SQL变更申请，经由审批流程完成上线
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          发起SQL工单
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="sub-title"
                >
                  数据导出
                </div>
                <div
                  class="desc"
                >
                  发起数据导出工单，审核通过后获取数据集。
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          发起导出工单
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-1thf7qv"
        >
          <div
            class="ant-col icon-wrapper css-dev-only-do-not-override-1thf7qv"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="icons/tool"
                >
                  <path
                    d="M5.32992 3.271C5.95397 3.04837 6.62839 3.00745 7.27478 3.153C7.92116 3.29855 8.51296 3.62458 8.98136 4.09319C9.44977 4.5618 9.77553 5.15374 9.92079 5.8002C10.066 6.44665 10.0248 7.12105 9.80192 7.745L20.6469 18.59L18.5249 20.711L7.67992 9.867C7.05587 10.0896 6.38145 10.1305 5.73506 9.985C5.08868 9.83945 4.49688 9.51342 4.02848 9.04481C3.56008 8.5762 3.23431 7.98425 3.08905 7.3378C2.9438 6.69135 2.98502 6.01695 3.20792 5.393L5.44392 7.63C5.58229 7.77326 5.74781 7.88754 5.93081 7.96615C6.11382 8.04476 6.31065 8.08614 6.50982 8.08787C6.70899 8.08961 6.90651 8.05165 7.09085 7.97623C7.2752 7.90081 7.44268 7.78943 7.58351 7.64859C7.72435 7.50775 7.83573 7.34027 7.91115 7.15593C7.98658 6.97159 8.02453 6.77407 8.0228 6.5749C8.02107 6.37573 7.97969 6.1789 7.90107 5.99589C7.82246 5.81289 7.70819 5.64737 7.56492 5.509L5.32892 3.27L5.32992 3.271ZM15.6969 5.155L18.8789 3.387L20.2929 4.801L18.5249 7.983L16.7569 8.337L14.6369 10.458L13.2219 9.044L15.3429 6.923L15.6969 5.155ZM8.62592 12.933L10.7469 15.055L5.79692 20.005C5.52396 20.2754 5.15764 20.4308 4.7735 20.439C4.38937 20.4473 4.01671 20.3078 3.73237 20.0494C3.44804 19.791 3.27372 19.4333 3.24535 19.0501C3.21699 18.6669 3.33674 18.2875 3.57992 17.99L3.67692 17.883L8.62692 12.933H8.62592Z"
                    fill="white"
                    fill-opacity="0.6"
                    id="1"
                  />
                  <path
                    d="M15.6969 5.15499L18.8789 3.38699L20.2929 4.80099L18.5249 7.98299L16.7569 8.33699L14.6369 10.458L13.2219 9.04399L15.3429 6.92299L15.6969 5.15499ZM8.62588 12.933L10.7469 15.055L5.79688 20.005C5.52391 20.2754 5.15759 20.4308 4.77346 20.439C4.38932 20.4473 4.01666 20.3078 3.73233 20.0494C3.448 19.791 3.27367 19.4333 3.24531 19.0501C3.21694 18.6669 3.3367 18.2875 3.57988 17.99L3.67688 17.883L8.62588 12.933Z"
                    fill="white"
                    id="2"
                  />
                </g>
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box css-dev-only-do-not-override-1thf7qv"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP5
                </div>
                <div
                  class="step-title"
                >
                  运维与审计
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap css-dev-only-do-not-override-1thf7qv"
            >
              <div
                class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="sub-title"
                >
                  操作审计
                </div>
                <div
                  class="desc"
                >
                  审计平台内用户操作
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          SQLE操作记录
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[`App render App when token is not existed 1`] = `
<div>
  <section
    class="css-1zkush"
  >
    <div
      class="css-9y19rd"
    >
      <div
        class="banner"
      >
        <img
          alt="left_bg"
          class="login-background-img"
          src="/static/image/login-left-bg.png"
        />
      </div>
    </div>
    <div
      class="css-1pqzecc"
    >
      <div
        class="login-page-right-content"
      >
        <div
          class="content-header"
        >
          <div
            class="logo"
          >
            <img
              alt="logo_img"
              src="custom_logo_mock_src_url"
            />
          </div>
          <div
            class="title"
          >
            <span
              class="label label-primary"
            >
              Action
            </span>
            <span
              class="label label-base"
            >
              SQLE
            </span>
          </div>
        </div>
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-1thf7qv"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-1thf7qv"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1thf7qv"
            >
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper ant-input-affix-wrapper-focused basic-input-wrapper login-form-field css-1pd1cd5 css-dev-only-do-not-override-1qauwux"
                    >
                      <span
                        class="ant-input-prefix"
                      >
                        <svg
                          fill="none"
                          height="19"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="user-4-fill"
                          >
                            <g
                              id="Vector"
                            >
                              <path
                                d="M6.47462 7.34681C5.80485 6.67704 5.42857 5.76863 5.42857 4.82143C5.42857 3.87423 5.80485 2.96582 6.47462 2.29605C7.14439 1.62627 8.0528 1.25 9 1.25C9.9472 1.25 10.8556 1.62627 11.5254 2.29605C12.1952 2.96582 12.5714 3.87423 12.5714 4.82143C12.5714 5.76863 12.1952 6.67704 11.5254 7.34681C10.8556 8.01658 9.9472 8.39286 9 8.39286C8.0528 8.39286 7.14439 8.01658 6.47462 7.34681Z"
                                fill="#C3C6CD"
                              />
                              <path
                                d="M16.5 15.1785C16.5 12.0225 13.9418 9.46426 10.7857 9.46426H7.21429C4.05821 9.46426 1.5 12.0225 1.5 15.1785V15.5357C1.5 15.9146 1.65051 16.2779 1.91842 16.5458C2.18633 16.8137 2.54969 16.9643 2.92857 16.9643H15.0714C15.4503 16.9643 15.8137 16.8137 16.0816 16.5458C16.3495 16.2779 16.5 15.9146 16.5 15.5357V15.1785Z"
                                fill="#C3C6CD"
                              />
                            </g>
                          </g>
                        </svg>
                      </span>
                      <input
                        aria-required="true"
                        class="ant-input css-dev-only-do-not-override-1qauwux"
                        id="username"
                        placeholder="用户名"
                        type="text"
                        value=""
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-1thf7qv"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1thf7qv"
            >
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper ant-input-password basic-input-wrapper login-form-field css-1pd1cd5 css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="ant-input-prefix"
                      >
                        <svg
                          fill="none"
                          height="19"
                          viewBox="0 0 18 19"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="lock-password-fill"
                          >
                            <path
                              d="M13.5 6.5H15C15.1989 6.5 15.3897 6.57902 15.5303 6.71967C15.671 6.86032 15.75 7.05109 15.75 7.25V16.25C15.75 16.4489 15.671 16.6397 15.5303 16.7803C15.3897 16.921 15.1989 17 15 17H3C2.80109 17 2.61032 16.921 2.46967 16.7803C2.32902 16.6397 2.25 16.4489 2.25 16.25V7.25C2.25 7.05109 2.32902 6.86032 2.46967 6.71967C2.61032 6.57902 2.80109 6.5 3 6.5H4.5V5.75C4.5 4.55653 4.97411 3.41193 5.81802 2.56802C6.66193 1.72411 7.80653 1.25 9 1.25C10.1935 1.25 11.3381 1.72411 12.182 2.56802C13.0259 3.41193 13.5 4.55653 13.5 5.75V6.5ZM12 6.5V5.75C12 4.95435 11.6839 4.19129 11.1213 3.62868C10.5587 3.06607 9.79565 2.75 9 2.75C8.20435 2.75 7.44129 3.06607 6.87868 3.62868C6.31607 4.19129 6 4.95435 6 5.75V6.5H12ZM8.25 11V12.5H9.75V11H8.25ZM5.25 11V12.5H6.75V11H5.25ZM11.25 11V12.5H12.75V11H11.25Z"
                              fill="#C3C6CD"
                              id="Vector"
                            />
                          </g>
                        </svg>
                      </span>
                      <input
                        aria-required="true"
                        class="ant-input css-dev-only-do-not-override-txh9fw"
                        id="password"
                        placeholder="密码"
                        type="password"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="eye-invisible"
                          class="anticon anticon-eye-invisible ant-input-password-icon"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="eye-invisible"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                            />
                            <path
                              d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-1thf7qv"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-1thf7qv"
            >
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-in-form-item css-dev-only-do-not-override-1thf7qv"
                    >
                      <span
                        class="ant-checkbox css-dev-only-do-not-override-1thf7qv ant-checkbox-checked"
                      >
                        <input
                          checked=""
                          class="ant-checkbox-input"
                          id="userAgreement"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        <div
                          class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            已阅读并同意
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <a
                              class="ant-typography css-dev-only-do-not-override-1thf7qv"
                              href="/user-agreement.html"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              用户协议
                            </a>
                          </div>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="ant-btn css-dev-only-do-not-override-4mxe6b ant-btn-primary login-btn basic-button-wrapper css-geipcv"
            type="submit"
          >
            <span>
              登 录
            </span>
          </button>
        </form>
      </div>
    </div>
  </section>
</div>
`;

exports[`App render App when user role is not admin 1`] = `
<div>
  <section
    class="css-m36rcd"
  >
    <div
      class="dms-layout-side css-13dah2i"
    >
      <div
        class="dms-layout-side-start"
      >
        <div>
          <div
            class="title"
          >
            <span
              class="label label-primary"
            >
              Action
            </span>
            <span
              class="label label-base"
            >
              SQLE
            </span>
          </div>
        </div>
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-1thf7qv"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 css-dev-only-do-not-override-is2hm8 ant-select-single ant-select-show-arrow"
              searchinputref="[object Object]"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="rc_select_TEST_OR_SSR"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                >
                  <span
                    class="custom-select-placeholder css-qly0fu"
                  >
                    <span
                      class="custom-select-placeholder-prefix"
                    >
                      <span
                        class="project-flag-icon css-u3jcp4"
                      >
                        <svg
                          fill="none"
                          height="18"
                          viewBox="0 0 18 18"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M2.25 2.25H9.2865C9.42575 2.25007 9.56222 2.28891 9.68064 2.36216C9.79907 2.43542 9.89476 2.54019 9.957 2.66475L10.5 3.75H15C15.1989 3.75 15.3897 3.82902 15.5303 3.96967C15.671 4.11032 15.75 4.30109 15.75 4.5V12.75C15.75 12.9489 15.671 13.1397 15.5303 13.2803C15.3897 13.421 15.1989 13.5 15 13.5H10.2135C10.0743 13.4999 9.93778 13.4611 9.81936 13.3878C9.70093 13.3146 9.60524 13.2098 9.543 13.0853L9 12H3.75V16.5H2.25V2.25Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="custom-select-placeholder-value"
                    >
                      请选择{{name}}
                    </span>
                  </span>
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="custom-icon custom-icon-right-arrow-select-suffix css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.78145 7.99999L5.48145 4.69999L6.42411 3.75732L10.6668 7.99999L6.42411 12.2427L5.48145 11.3L8.78145 7.99999Z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
        <ul
          class="ant-menu ant-menu-root ant-menu-inline ant-menu-light custom-menu css-dev-only-do-not-override-1thf7qv"
          data-menu-list="true"
          role="menu"
          tabindex="0"
        />
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
      <div
        class="dms-layout-side-end"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-1thf7qv"
        >
          <div
            class="ant-spin-container"
          >
            <span
              class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-1thf7qv"
            >
              <span
                class="ant-avatar-string"
                style="transform: scale(1) translateX(-50%);"
              >
                A
              </span>
            </span>
          </div>
        </div>
        <div
          class="global-system-icon-wrapper"
        >
          <span
            class="custom-icon-global-system css-u3jcp4"
          >
            <svg
              fill="none"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.125 4.875L9 0.75L1.875 4.875V13.125L9 17.25L16.125 13.125V4.875ZM9 12.75C11.0711 12.75 12.75 11.0711 12.75 9C12.75 6.92893 11.0711 5.25 9 5.25C6.92893 5.25 5.25 6.92893 5.25 9C5.25 11.0711 6.92893 12.75 9 12.75Z"
                fill="#c3c6cd"
                fill-rule="evenodd"
              />
              <path
                d="M9 11.25C9.59674 11.25 10.169 11.0129 10.591 10.591C11.0129 10.169 11.25 9.59674 11.25 9C11.25 8.40326 11.0129 7.83097 10.591 7.40901C10.169 6.98705 9.59674 6.75 9 6.75C8.40326 6.75 7.83097 6.98705 7.40901 7.40901C6.98705 7.83097 6.75 8.40326 6.75 9C6.75 9.59674 6.98705 10.169 7.40901 10.591C7.83097 11.0129 8.40326 11.25 9 11.25Z"
                fill="#8a8f99"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="dms-layout-content"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          用户引导
        </div>
        <div
          class="extra"
        />
      </div>
      <section
        class="css-1wil037"
      >
        <div
          class="ant-row ant-row-no-wrap ant-row-middle step-container css-dev-only-do-not-override-1thf7qv"
        >
          <div
            class="ant-col icon-wrapper css-dev-only-do-not-override-1thf7qv"
            style="flex: 0 0 40px; min-width: 0;"
          >
            <span
              class="step-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="icons/rule"
                >
                  <path
                    d="M5.83333 1.5C5.09695 1.5 4.5 2.09695 4.5 2.83333V3.5H18.1667C18.903 3.5 19.5 4.09695 19.5 4.83333V20.1667C19.5 20.2818 19.4854 20.3935 19.458 20.5H20.1667C20.903 20.5 21.5 19.903 21.5 19.1667V2.83333C21.5 2.09695 20.903 1.5 20.1667 1.5H5.83333Z"
                    fill="white"
                    id="2"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.83333 3.5C3.09695 3.5 2.5 4.09695 2.5 4.83333V21.1667C2.5 21.903 3.09695 22.5 3.83333 22.5H18.1667C18.903 22.5 19.5 21.903 19.5 21.1667V4.83333C19.5 4.09695 18.903 3.5 18.1667 3.5H3.83333ZM7 9.66667C7 9.29848 7.29848 9 7.66667 9H14.3333C14.7015 9 15 9.29848 15 9.66667V10.3333C15 10.7015 14.7015 11 14.3333 11H7.66667C7.29848 11 7 10.7015 7 10.3333V9.66667ZM7 14.6667C7 14.2985 7.29848 14 7.66667 14H11.3333C11.7015 14 12 14.2985 12 14.6667V15.3333C12 15.7015 11.7015 16 11.3333 16H7.66667C7.29848 16 7 15.7015 7 15.3333V14.6667Z"
                    fill="white"
                    fill-opacity="0.6"
                    fill-rule="evenodd"
                    id="1"
                  />
                </g>
              </svg>
            </span>
          </div>
          <div
            class="ant-col step-box css-dev-only-do-not-override-1thf7qv"
            style="flex-basis: auto; min-width: 0;"
          >
            <div
              class="title-wrapper"
            >
              <div
                class="inner-title-wrapper"
              >
                <div
                  class="step-index"
                >
                  STEP1
                </div>
                <div
                  class="step-title"
                >
                  数据查询与变更
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-row-no-wrap css-dev-only-do-not-override-1thf7qv"
            >
              <div
                class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="sub-title"
                >
                  SQL窗口
                </div>
                <div
                  class="desc"
                >
                  使用在线的数据编辑器（CloudBeaver）进行SQL查询和编辑
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          进入SQL工作台
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="sub-title"
                >
                  数据变更
                </div>
                <div
                  class="desc"
                >
                  在线提起SQL变更申请，经由审批流程完成上线
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          发起SQL工单
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-col ant-col-8 content-wrapper css-dev-only-do-not-override-1thf7qv"
              >
                <div
                  class="sub-title"
                >
                  数据导出
                </div>
                <div
                  class="desc"
                >
                  发起数据导出工单，审核通过后获取数据集。
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-1thf7qv ant-space-horizontal ant-space-align-center actions"
                  style="flex-wrap: wrap; margin-bottom: -8px;"
                >
                  <div
                    class="ant-space-item"
                    style="padding-bottom: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-eo1pvk ant-btn-default ant-btn-sm guidance-button-wrapper css-aj0zfl"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-eo1pvk ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                        >
                          发起导出工单
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </section>
</div>
`;
